--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -252,10 +252,7 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-#exec_always --no-startup-id /usr/local/bin/feh_wallpaper.sh 'Jenna Ashley'
-#exec_always --no-startup-id feh --bg-fill \"$(shuf -n1 -e ~/img/wallpapers/macos/*)\"
-exec_always --no-startup-id feh --bg-fill ~/img/wallpapers/arch/arch-vintage.png
-#exec_always --no-startup-id hsetroot -solid "#1b1b1b"
+exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch/i3wm/1920x1080/
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
