--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -253,7 +253,7 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch/i3wm/1920x1080/
+exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
