modified:   etc/default/grub 	modified:   etc/mpv/mpv.conf 	new file:   etc/netctl/lucas 	modified:   home/lucas/.config/fish/config.fish 	modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3/scripts/trash 	modified:   home/lucas/.config/i3/scripts/volume 	new file:   home/lucas/.config/pacaur/config 	modified:   home/lucas/.xinitrc 	new file:   usr/share/i3lock-fancy/icons/lock.png

--- a/etc/mpv/mpv.conf
+++ b/etc/mpv/mpv.conf
@@ -132,7 +132,7 @@ audio-pitch-correction=no
 #hwdec=auto
 
 # Loop settings
-loop=inf
+#loop=inf
 
 # You can also include other configuration files.
 #include=/path/to/the/file/you/want/to/include
@@ -168,4 +168,4 @@ screenshot-template="%F - %02n"
 
 #volume=20
 
-#save-position-on-quit
+save-position-on-quit
