--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -40,14 +40,14 @@ bindsym Print exec --no-startup-id ~/bin/screenshot.sh
 bindsym --release Mod1+Sys_Req exec ~/bin/screenshot.sh -s
 bindsym $mod+Print exec ~/bin/screenshot.sh -d
 
-#bindsym F5 exec i3-sensible-terminal
-bindsym F5 exec termite
-bindsym F6 exec thunar
-bindsym F7 exec pluma
-bindsym F8 exec firefox
-bindsym F9 exec ~/.local/share/TelegramDesktop/Telegram
-bindsym F11 exec ~/bin/screencast.sh
-bindsym F12 exec ~/bin/screencast.sh -s
+#bindsym F5 exec --no-startup-id i3-sensible-terminal
+bindsym F5 exec --no-startup-id termite
+bindsym F6 exec --no-startup-id thunar
+bindsym F7 exec --no-startup-id pluma
+bindsym F8 exec --no-startup-id firefox
+bindsym F9 exec --no-startup-id ~/.local/share/TelegramDesktop/Telegram
+bindsym F11 exec --no-startup-id ~/bin/screencast.sh
+bindsym F12 exec --no-startup-id ~/bin/screencast.sh -s
 
 bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 1%+ unmute 
 bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 1%- unmute 
@@ -61,11 +61,11 @@ bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
 -b '.xinitrc' 'i3-msg exec i3-sensible-editor ~/.config/.xinitrc' \
 -b '.Xdefaults' 'i3-msg exec i3-sensible-editor ~/.config/.Xdefaults'"
 
-bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Shift+t exec thunar
-bindsym $mod+Shift+w exec firefox
-bindsym $mod+Shift+m exec thunderbird
-bindsym $mod+Shift+i exec ristretto
+bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
+bindsym $mod+Shift+t exec --no-startup-id thunar
+bindsym $mod+Shift+w exec --no-startup-id firefox
+bindsym $mod+Shift+m exec --no-startup-id thunderbird
+bindsym $mod+Shift+i exec --no-startup-id ristretto
 
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -197,11 +197,11 @@ mode "apps" {
 bindsym $mod+Shift+a mode "apps"
 
 mode "[c]onfig, i3[b]locks, [d]unst, c[o]mpton, [x]initrc" {
-	bindsym c exec i3-sensible-editor ~/.config/i3/config , mode "default"
-	bindsym b exec i3-sensible-editor ~/.config/i3/blocks , mode "default"
-	bindsym d exec i3-sensible-editor ~/.config/i3/dunstrc , mode "default"
-	bindsym o exec i3-sensible-editor ~/.config/compton.conf , mode "default"
-	bindsym x exec i3-sensible-editor ~/.xinitrc , mode "default"
+	bindsym c exec --no-startup-id i3-sensible-editor ~/.config/i3/config , mode "default"
+	bindsym b exec --no-startup-id i3-sensible-editor ~/.config/i3/blocks , mode "default"
+	bindsym d exec --no-startup-id i3-sensible-editor ~/.config/i3/dunstrc , mode "default"
+	bindsym o exec --no-startup-id i3-sensible-editor ~/.config/compton.conf , mode "default"
+	bindsym x exec --no-startup-id i3-sensible-editor ~/.xinitrc , mode "default"
 
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
@@ -209,7 +209,7 @@ mode "[c]onfig, i3[b]locks, [d]unst, c[o]mpton, [x]initrc" {
 bindsym $mod+Control+c mode "[c]onfig, i3[b]locks, [d]unst, c[o]mpton, [x]initrc"
 
 mode "[t]ravar, [s]air, [d]esligar, [r]einiciar, s[u]spender" {
-	bindsym t exec i3lock-fancy -f "Droid-Sans-Mono" -t "Tela Bloqueada" -p -g -- scrot -z
+	bindsym t exec --no-startup-id i3lock-fancy -f "Droid-Sans-Mono" -t "Tela Bloqueada" -p -g -- scrot -z
 	bindsym s exec i3-msg exit
 	bindsym u exec systemctl suspend
 	bindsym r exec systemctl reboot
@@ -253,17 +253,17 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
-exec --no-startup-id numlockx
-exec --no-startup-id dunst -config ~/.config/i3/dunstrc
-exec --no-startup-id parcellite
+#exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
+#exec --no-startup-id numlockx
+#exec --no-startup-id dunst -config ~/.config/i3/dunstrc
+#exec --no-startup-id parcellite
 #exec --no-startup-id deluge
 #exec --no-startup-id pamac-tray
-exec --no-startup-id sudo headsetcontrol 64
-exec --no-startup-id compton -b --config ~/.config/compton.conf
-exec --no-startup-id /usr/local/bin/xautolock.sh
-exec --no-startup-id /usr/lib/vino/vino-server
-exec --no-startup-id sudo /usr/local/sbin/wireless.sh
+#exec --no-startup-id sudo headsetcontrol 64
+#exec --no-startup-id compton -b --config ~/.config/compton.conf
+#exec --no-startup-id /usr/local/bin/xautolock.sh
+#exec --no-startup-id /usr/lib/vino/vino-server
+#exec --no-startup-id sudo /usr/local/sbin/wireless.sh
 
 bar {
 	font xft:FontAwesome 9
