modified:   etc/mpv/mpv.conf 	modified:   home/lucas/.config/fish/config.fish 	modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	new file:   home/lucas/.config/i3/scripts/mail 	modified:   home/lucas/.config/i3/scripts/mpd 	modified:   home/lucas/.config/i3/scripts/wallpaper 	new file:   home/lucas/.config/systemd/user/default.target.wants/dropbox.service 	new file:   home/lucas/.config/systemd/user/deluged.service 	new file:   home/lucas/.config/systemd/user/mega.service 	new file:   home/lucas/.config/systemd/user/mega.timer 	deleted:    home/lucas/.mpd/playlists/Sertanejo.m3u 	new file:   home/lucas/.rsync 	modified:   home/lucas/.tmux.conf 	modified:   home/lucas/.xinitrc 	modified:   home/lucas/.zshrc 	modified:   home/lucas/bin/config.conf 	modified:   home/lucas/bin/radio.sh 	modified:   home/lucas/bin/screencast.sh 	modified:   home/lucas/bin/wallpaper.sh 	new file:   var/spool/cron/lucas

--- a/etc/mpv/mpv.conf
+++ b/etc/mpv/mpv.conf
@@ -30,7 +30,7 @@
 ##################
 
 # Specify default video driver (see --vo=help for a list).
-#vo=vdpau
+vo=vdpau
 
 # Start in fullscreen mode by default.
 #fs=yes
@@ -39,7 +39,7 @@
 #geometry=50%:50%
 
 # don't allow a new window to have a size larger than 90% of the screen size
-#autofit-larger=90%x90%
+#autofit-larger=50%x50%
 
 # Do not close the window on exit.
 #keep-open=yes
@@ -82,7 +82,7 @@ ao=pulse
 #softvol=no
 
 # Do not filter audio to keep pitch when changing playback speed.
-audio-pitch-correction=no
+audio-pitch-correction=yes
 
 # Output 5.1 audio natively, and upmix/downmix audio with a different format.
 #audio-channels=5.1
@@ -168,4 +168,13 @@ screenshot-template="%F - %02n"
 
 #volume=20
 
-save-position-on-quit
+#save-position-on-quit
+
+
+[youtube]
+no-resume-playback
+cache=123400
+profile=big-cache
+geometry=50%:50%
+autofit-larger=50%x50%
+
