--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -53,13 +53,13 @@ bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 1%+ unmute
 bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 1%- unmute 
 
 bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
--b 'config' 'i3-msg exec i3-sensible-editor ~/.config/i3/config' \
--b 'i3blocks' 'i3-msg exec i3-sensible-editor ~/.config/i3/blocks' \
--b 'dunst' 'i3-msg exec i3-sensible-editor ~/.config/i3/dunstrc' \
--b 'compton' 'i3-msg exec i3-sensible-editor ~/.config/compton.conf' \
--b '.Xresources' 'i3-msg exec i3-sensible-editor ~/.Xresources' \
--b '.xinitrc' 'i3-msg exec i3-sensible-editor ~/.config/.xinitrc' \
--b '.Xdefaults' 'i3-msg exec i3-sensible-editor ~/.config/.Xdefaults'"
+-b 'config' 'i3-msg exec pluma ~/.config/i3/config' \
+-b 'i3blocks' 'i3-msg exec pluma ~/.config/i3/blocks' \
+-b 'dunst' 'i3-msg exec pluma ~/.config/i3/dunstrc' \
+-b 'compton' 'i3-msg exec pluma ~/.config/compton.conf' \
+-b '.Xresources' 'i3-msg exec pluma ~/.Xresources' \
+-b '.xinitrc' 'i3-msg exec pluma ~/.config/.xinitrc' \
+-b '.Xdefaults' 'i3-msg exec pluma ~/.config/.Xdefaults'"
 
 bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 bindsym $mod+Shift+t exec --no-startup-id thunar
@@ -145,6 +145,7 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # move position center
+for_window [class="^Catfish"] floating enable
 for_window [class="^etcher-electron"] floating enable
 for_window [class="^Skype"] floating enable
 for_window [title="^Governo do Estado de Mato Grosso do Sul"] floating enable
@@ -197,11 +198,11 @@ mode "apps" {
 bindsym $mod+Shift+a mode "apps"
 
 mode "[c]onfig, i3[b]locks, [d]unst, c[o]mpton, [x]initrc" {
-	bindsym c exec --no-startup-id i3-sensible-editor ~/.config/i3/config , mode "default"
-	bindsym b exec --no-startup-id i3-sensible-editor ~/.config/i3/blocks , mode "default"
-	bindsym d exec --no-startup-id i3-sensible-editor ~/.config/i3/dunstrc , mode "default"
-	bindsym o exec --no-startup-id i3-sensible-editor ~/.config/compton.conf , mode "default"
-	bindsym x exec --no-startup-id i3-sensible-editor ~/.xinitrc , mode "default"
+	bindsym c exec --no-startup-id pluma ~/.config/i3/config , mode "default"
+	bindsym b exec --no-startup-id pluma ~/.config/i3/blocks , mode "default"
+	bindsym d exec --no-startup-id pluma ~/.config/i3/dunstrc , mode "default"
+	bindsym o exec --no-startup-id pluma ~/.config/compton.conf , mode "default"
+	bindsym x exec --no-startup-id pluma ~/.xinitrc , mode "default"
 
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
@@ -236,9 +237,6 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-#bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-
 # Rate do Cursor
 exec --no-startup-id xset r rate 300 75 &
 
@@ -253,17 +251,15 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-#exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
-#exec --no-startup-id numlockx
-#exec --no-startup-id dunst -config ~/.config/i3/dunstrc
-#exec --no-startup-id parcellite
-#exec --no-startup-id deluge
-#exec --no-startup-id pamac-tray
-#exec --no-startup-id sudo headsetcontrol 64
-#exec --no-startup-id compton -b --config ~/.config/compton.conf
-#exec --no-startup-id /usr/local/bin/xautolock.sh
-#exec --no-startup-id /usr/lib/vino/vino-server
-#exec --no-startup-id sudo /usr/local/sbin/wireless.sh
+exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
+exec --no-startup-id numlockx
+exec --no-startup-id dunst -config ~/.config/i3/dunstrc
+exec --no-startup-id parcellite
+exec --no-startup-id sudo headsetcontrol 64
+exec --no-startup-id compton -b --config ~/.config/compton.conf
+exec --no-startup-id /usr/local/bin/xautolock.sh
+exec --no-startup-id /usr/lib/vino/vino-server
+#exec --no-startup-id sudo wireless.sh
 
 bar {
 	font xft:FontAwesome 9
