--- a/home/lucas/.config/systemd/user/xautolock.service
+++ b/home/lucas/.config/systemd/user/xautolock.service
@@ -2,10 +2,10 @@
 Description=Lock the screen automatically after a timeout
 
 [Service]
-Type=forking
-#Type=simple
+#Type=forking
+Type=simple
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/xautolock -time 5 -locker 'i3lock-fancy -f Iosevka-Thin -t "Tela Bloqueada" -p -- scrot -z' -detectsleep
+ExecStart=killall i3lock ; sleep 1 ; /usr/bin/xautolock -time 5 -locker 'i3lock-fancy -f Iosevka-Thin -t "Tela Bloqueada" -p -- scrot -z' -detectsleep
 
 [Install]
 WantedBy=graphical.target
