--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -19,6 +19,7 @@ set $fundo-urgente          #900000
 set $indicador              #00ff00
 set $separador              #666666
 set $borda					#5b6365
+set $transparente			#00000000
 
 # classe                borda               fundo           texto                   indicador               borda_filha
 client.focused          $borda				$fundo-inativo  $texto                  $borda					$borda
@@ -47,7 +48,7 @@ bindsym F7 exec --no-startup-id pluma
 bindsym F8 exec --no-startup-id firefox
 bindsym F9 exec --no-startup-id ~/.local/share/TelegramDesktop/Telegram
 bindsym F11 exec --no-startup-id ~/bin/screencast.sh
-bindsym F12 exec --no-startup-id ~/bin/screencast.sh -s
+bindsym Control+F12 exec --no-startup-id ~/bin/screencast.sh -s
 
 bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 1%+ unmute 
 bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 1%- unmute 
@@ -262,7 +263,8 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
+#exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
+exec_always --no-startup-id ~/bin/wallpaper.sh /usr/share/backgrounds/default
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
@@ -270,18 +272,22 @@ exec --no-startup-id sudo headsetcontrol 64
 exec --no-startup-id compton -b --config ~/.config/compton.conf
 exec --no-startup-id /usr/local/bin/xautolock.sh
 exec --no-startup-id /usr/lib/vino/vino-server
-#exec --no-startup-id sudo wireless.sh
+exec --no-startup-id compton -b --config ~/.config/compton.conf
 
 bar {
-	font xft:FontAwesome 9
+	font xft:FontAwesome 10
 	tray_output none	
+	i3bar_command i3bar -t
 	status_command i3blocks -c ~/.config/i3/blocks
+	
 	colors {
-		background	$fundo-inativo
-		separator	$separador
+		background 		$transparente
+		#background		$fundo-inativo
+		separator		$separador
+
 		#					borda			fundo			texto
-		focused_workspace	$fundo-inativo	$fundo-inativo	$texto-ativo
-		inactive_workspace	$fundo-inativo	$fundo-inativo	$texto-inativo
-		urgent_workspace	$fundo-inativo	$fundo-inativo	$texto-urgente
+		focused_workspace	$transparente	$transparente	$texto-ativo
+		inactive_workspace	$transparente	$transparente	$texto-inativo
+		urgent_workspace	$transparente	$transparente	$texto-urgente
     }
 }
