--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -5,9 +5,31 @@ gaps outer 0
 
 #hide_edge_borders both
 #new_window none
-new_window pixel 2
+new_window pixel 3
 
 set $wallpaper				"~/img/wallpapers/apple/sierra.png"
+
+#100% — FF
+#95% — F2
+#90% — E6
+#85% — D9
+#80% — CC
+#75% — BF
+#70% — B3
+#65% — A6
+#60% — 99
+#55% — 8C
+#50% — 80
+#45% — 73
+#40% — 66
+#35% — 59
+#30% — 4D
+#25% — 40
+#20% — 33
+#15% — 26
+#10% — 1A
+#5% — 0D
+#0% — 00
 
 set $fundo                  #1b1b1b
 set $fundo-inativo          #222222
@@ -19,7 +41,7 @@ set $fundo-urgente          #900000
 set $indicador              #00ff00
 set $separador              #666666
 set $borda					#5b6365
-set $transparente			#00000000
+set $transparente			#80000000
 
 # classe                borda               fundo           texto                   indicador               borda_filha
 client.focused          $borda				$fundo-inativo  $texto                  $borda					$borda
@@ -113,7 +135,6 @@ bindsym $mod+minus scratchpad show
 
 set $workspace1 "1 "
 set $workspace2 "2 "
-#set $workspace3 "3 "
 set $workspace3 "3 "
 set $workspace4 "4 "
 set $workspace5 "5 "
@@ -148,6 +169,7 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # move position center
+for_window [class="^VirtualBox" title="*Executando*"] floating enable
 for_window [class="^Catfish"] floating enable
 for_window [class="^etcher-electron"] floating enable
 for_window [class="^Skype"] floating enable
@@ -265,7 +287,6 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-#exec_always --no-startup-id ~/bin/wallpaper.sh ~/img/wallpapers/arch-logo/2560x1600/dark.jpg
 exec_always --no-startup-id ~/bin/wallpaper.sh /usr/share/backgrounds/default
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
@@ -275,6 +296,7 @@ exec --no-startup-id compton -b --config ~/.config/compton.conf
 exec --no-startup-id /usr/local/bin/xautolock.sh
 exec --no-startup-id /usr/lib/vino/vino-server
 exec --no-startup-id compton -b --config ~/.config/compton.conf
+exec --no-startup-id xautolock.sh
 
 bar {
 	font xft:FontAwesome 9
