--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -1,37 +1,11 @@
 set $mod Mod4
-font xft:DejaVu Sans Mono 9
-#font xft:Droid Sans Mono 10
-#font pango:Anonymous Pro 9
 gaps inner 10
-gaps outer 0
-
 hide_edge_borders both
-new_window none
-#new_window pixel 3
+#new_window none
+new_window pixel 3
+font pango:DejaVu Sans Mono 8
 
-set $wallpaper				"~/img/wallpapers/apple/sierra.png"
-
-#100% — FF
-#95% — F2
-#90% — E6
-#85% — D9
-#80% — CC
-#75% — BF
-#70% — B3
-#65% — A6
-#60% — 99
-#55% — 8C
-#50% — 80
-#45% — 73
-#40% — 66
-#35% — 59
-#30% — 4D
-#25% — 40
-#20% — 33
-#15% — 26
-#10% — 1A
-#5% — 0D
-#0% — 00
+#100%: FF - 95%: F2 - 90%: E6 - 85%: D9 - 80%: CC - 75%: BF - 70%: B3 - 65%: A6 - 60%: 99 - 55%: 8C - 50%: 80 - 45%: 73 - 40%: 66 - 35%: 59 - 30%: 4D - 25%: 40 - 20%: 33 - 15%: 26 - 10%: 1A - 5%: 0D - 0%: 00
 
 set $fundo                  #1b1b1b
 set $fundo-inativo          #222222
@@ -45,54 +19,28 @@ set $separador              #666666
 set $borda					#5b6365
 set $transparente			#000000BF
 
-# classe                borda               fundo           texto                   indicador               borda_filha
 client.focused          $borda				$fundo-inativo  $texto                  $borda					$borda
 client.unfocused        $borda				$fundo-inativo  $texto-inativo			$fundo-inativo			$borda
 client.focused_inactive $borda				$fundo-inativo  $texto-inativo			$fundo-inativo			$borda
-#client.urgent           $borda				$fundo-inativo  $fundo-urgente          $fundo-inativo			$borda
 client.urgent           $borda				$fundo-inativo  $texto-urgente          $fundo-inativo			$borda
 
 floating_modifier $mod
 
-bindsym $mod+d exec rofi -show run -fullscreen -fake-transparency -fake-background $wallpaper
-bindsym $mod+Shift+f exec rofi -show find -modi find:~/.config/rofi/scripts/finder.sh
-bindsym $mod+Shift+d exec rofi -show fm -fullscreen -fake-transparency -fake-background $wallpaper
-bindsym $mod+Control+d exec rofi -show keys
+bindsym $mod+Return exec i3-sensible-terminal
+
+bindsym $mod+Shift+q kill
+
+bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 bindsym $mod+Shift+x exec i3lock-fancy -f "Droid-Sans-Mono" -t "Arch Linux" -p -g -- scrot -z
+
+bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+ unmute
+bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%- unmute
 
 bindsym Print exec --no-startup-id ~/bin/screenshot.sh
 bindsym --release Mod1+Sys_Req exec ~/bin/screenshot.sh -s
 bindsym $mod+Print exec ~/bin/screenshot.sh -d
-bindsym Control+Print exec imgur-screenshot
-bindsym Control+Mod1+Sys_Req exec imgur-screenshot
-
-#bindsym F5 exec --no-startup-id i3-sensible-terminal
-bindsym F5 exec --no-startup-id termite
-bindsym F6 exec --no-startup-id thunar
-bindsym F7 exec --no-startup-id pluma
-bindsym F8 exec --no-startup-id firefox
-bindsym F9 exec --no-startup-id ~/.local/share/TelegramDesktop/Telegram
-bindsym Control+F11 exec --no-startup-id ~/bin/screencast.sh
-bindsym Control+F12 exec --no-startup-id ~/bin/screencast.sh -s
-
-bindsym XF86AudioRaiseVolume exec (amixer -q -D pulse sset Master 5%+ unmute && notify-send "Volume" "$(amixer -D pulse get Master | awk 'NR==6{print $5}')")
-bindsym XF86AudioLowerVolume exec (amixer -q -D pulse sset Master 5%- unmute && notify-send "Volume" "$(amixer -D pulse get Master | awk 'NR==6{print $5}')")
-
-bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
--b 'config' 'i3-msg exec pluma ~/.config/i3/config' \
--b 'i3blocks' 'i3-msg exec pluma ~/.config/i3/blocks' \
--b 'dunst' 'i3-msg exec pluma ~/.config/i3/dunstrc' \
--b 'compton' 'i3-msg exec pluma ~/.config/compton.conf' \
--b 'rofi' 'i3-msg exec pluma ~/.config/rofi/config' \
--b '.Xresources' 'i3-msg exec pluma ~/.Xresources' \
--b '.xinitrc' 'i3-msg exec pluma ~/.config/.xinitrc' \
--b '.Xdefaults' 'i3-msg exec pluma ~/.config/.Xdefaults'"
-
-bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
-bindsym $mod+Shift+t exec --no-startup-id thunar
-bindsym $mod+Shift+w exec --no-startup-id firefox
-bindsym $mod+Shift+i exec --no-startup-id ristretto
 
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -124,27 +72,21 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 bindsym $mod+Shift+space floating toggle
-
 bindsym $mod+space focus mode_toggle
 
 bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
-bindsym $mod+Shift+q kill
-
-bindsym $mod+Shift+minus move scratchpad
-bindsym $mod+minus scratchpad show
-
-set $workspace1 "1 "
-set $workspace2 "2 "
-set $workspace3 "3 "
-set $workspace4 "4 "
-set $workspace5 "5 "
-set $workspace6 "6 "
-set $workspace7 "7 "
-set $workspace8 "8 "
-set $workspace9 "9 "
-set $workspace10 "10 "
+set $workspace1 "1"
+set $workspace2 "2"
+set $workspace3 "3"
+set $workspace4 "4"
+set $workspace5 "5"
+set $workspace6 "6"
+set $workspace7 "7"
+set $workspace8 "8"
+set $workspace9 "9"
+set $workspace10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -169,6 +111,11 @@ bindsym $mod+Shift+7 move container to workspace $workspace7
 bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
+
+bindsym $mod+Shift+c reload
+bindsym $mod+Shift+r restart
+
+#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # move position center
 for_window [class="^VirtualBox" title="*Executando*"] floating enable
@@ -210,114 +157,72 @@ assign [class="^Whatsie"] $workspace9
 assign [class="^Hexchat"] $workspace9
 assign [class="^Gtkman"] $workspace10
 
-bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
+bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
+-b 'config' 'i3-msg exec pluma ~/.config/i3/config' \
+-b 'i3blocks' 'i3-msg exec pluma ~/.config/i3/blocks' \
+-b 'dunst' 'i3-msg exec pluma ~/.config/i3/dunstrc' \
+-b 'compton' 'i3-msg exec pluma ~/.config/compton.conf' \
+-b 'rofi' 'i3-msg exec pluma ~/.config/rofi/config' \
+-b '.Xresources' 'i3-msg exec pluma ~/.Xresources' \
+-b '.xinitrc' 'i3-msg exec pluma ~/.config/.xinitrc' \
+-b '.Xdefaults' 'i3-msg exec pluma ~/.config/.Xdefaults'"
 
-mode "[p]opcorntime, [s]tremio, [d]eadbeef" {
-	bindsym p exec --no-startup-id ~/.local/share/popcorntime/Popcorn-Time , mode "default"
-	bindsym s exec --no-startup-id ~/.local/share/stremio/Stremio-runtime , mode "default"
-	bindsym d exec --no-startup-id deadbeef , mode "default"
-
-	bindsym Return mode "default"
-	bindsym Escape mode "default"
-}
-bindsym $mod+Shift+m mode "[p]opcorntime, [s]tremio, [d]eadbeef"
-
-mode "[f]firefox, [c]hromium, t[h]underbird, [t]ermite, [p]luma, t[h]unar, t[e]legram, [w]hatsie, [a]tom, [s]ublime" {
-	bindsym f exec --no-startup-id firefox , mode "default"
-	bindsym c exec --no-startup-id chromium --process-per-site , mode "default"
-	bindsym h exec --no-startup-id thunderbird , mode "default"
-	bindsym t exec --no-startup-id termite , mode "default"
-	bindsym p exec --no-startup-id pluma , mode "default"
-	bindsym h exec --no-startup-id thunar , mode "default"
-	bindsym e exec --no-startup-id ~/.local/share/TelegramDesktop/Telegram , mode "default"
-	bindsym w exec --no-startup-id whatsie , mode "default"
-	bindsym a exec --no-startup-id atom , mode "default"
-	bindsym s exec --no-startup-id subl , mode "default"
-
-	bindsym Return mode "default"
-	bindsym Escape mode "default"
-}
-bindsym $mod+Shift+a mode "[f]firefox, [c]hromium, t[h]underbird, [t]ermite, [p]luma, t[h]unar, t[e]legram, [w]hatsie, [a]tom, [s]ublime"
-
-mode "[c]onfig, i3[b]locks, [d]unst, c[o]mpton, [x]initrc" {
-	bindsym c exec --no-startup-id pluma ~/.config/i3/config , mode "default"
-	bindsym b exec --no-startup-id pluma ~/.config/i3/blocks , mode "default"
-	bindsym d exec --no-startup-id pluma ~/.config/i3/dunstrc , mode "default"
-	bindsym o exec --no-startup-id pluma ~/.config/compton.conf , mode "default"
-	bindsym x exec --no-startup-id pluma ~/.xinitrc , mode "default"
-
-	bindsym Return mode "default"
-	bindsym Escape mode "default"
-}
-bindsym $mod+Control+c mode "[c]onfig, i3[b]locks, [d]unst, c[o]mpton, [x]initrc"
-
-mode "[t]ravar, [s]air, [d]esligar, [r]einiciar, s[u]spender" {
-	bindsym t exec --no-startup-id i3lock-fancy -f "Droid-Sans-Mono" -t "Arch Linux" -p -g -- scrot -z
-	bindsym s exec i3-msg exit
-	bindsym u exec systemctl suspend
-	bindsym r exec systemctl reboot
-	bindsym d exec systemctl poweroff 
+mode "[f]irefox, [t]hunar, t[e]legram, [p]opcorntime" {
+    bindsym f exec firefox , mode "default"
+    bindsym t exec thunar , mode "default"
+    bindsym e exec ~/.local/share/TelegramDesktop/Telegram , mode "default"
+    bindsym p exec ~/.local/share/popcorntime/Popcorn-Time , mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym $mod+Shift+e mode "[t]ravar, [s]air, [d]esligar, [r]einiciar, s[u]spender"
+bindsym $mod+Shift+a mode "[f]irefox, [t]hunar, t[e]legram, [p]opcorntime"
 
-mode "resize" {
-	bindsym j resize shrink width 10 px or 10 ppt
-	bindsym k resize grow height 10 px or 10 ppt
-	bindsym l resize shrink height 10 px or 10 ppt
-	bindsym semicolon resize grow width 10 px or 10 ppt
-
-	bindsym Left resize shrink width 10 px or 10 ppt
-	bindsym Down resize grow height 10 px or 10 ppt
-	bindsym Up resize shrink height 10 px or 10 ppt
-	bindsym Right resize grow width 10 px or 10 ppt
+mode "[s]air, [d]esligar, [r]einiciar, [s]uspender" {
+	bindsym s exec i3-msg exit
+	bindsym d exec systemctl poweroff
+	bindsym r exec systemctl reboot
+	bindsym s exec systemctl suspend
 
 	bindsym Return mode "default"
-	bindsym Escape mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+Shift+e mode "[s]air, [d]esligar, [r]einiciar, [s]uspender"
+
+mode "resize" {
+        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym semicolon resize grow width 10 px or 10 ppt
+
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
 
-# Rate do Cursor
-exec --no-startup-id xset r rate 300 75 &
-
-# Aceleração do mouse
-#"Very Fast"            xset m 7 10 &
-#"Normal(Fast)"         xset m 3 10 &
-#"System Default"		xset m default &
-#"Glacial"              xset m 0 10 &
-#
-# Veloz: 3/1 0
-# Normal: default
-# Glacial: 1/3 0 
-#exec --no-startup-id xset m default &
-
-exec_always --no-startup-id ~/bin/wallpaper.sh /usr/share/backgrounds/default
+exec_always --no-startup-id hsetroot -solid "#1b1b1b"
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
 exec --no-startup-id sudo headsetcontrol 64
-exec --no-startup-id compton -b --config ~/.config/compton.conf
 exec --no-startup-id /usr/local/bin/xautolock.sh
-exec --no-startup-id /usr/lib/vino/vino-server
-exec --no-startup-id compton -b --config ~/.config/compton.conf
-exec --no-startup-id xautolock.sh
 
 bar {
-	font xft:DejaVu Sans Mono 9,FontAwesome 9
-	tray_output none	
-	#i3bar_command i3bar -t
+    font xft:FontAwesome 9,DejaVu Sans Mono 9
+    tray_output none
 	status_command i3blocks -c ~/.config/i3/blocks
-	
+
 	colors {
-		#background		$transparente
 		background		$fundo-inativo
 		separator		$separador
 
 		#					borda			fundo			texto
-		focused_workspace	$borda			$fundo-inativo	$texto-ativo
+		focused_workspace	$fundo-inativo	$fundo-inativo	$texto-ativo
 		inactive_workspace	$fundo-inativo	$fundo-inativo	$texto-inativo
 		urgent_workspace	$fundo-inativo	$fundo-inativo	$texto-urgente
     }
